css correction for alignment

--- a/src/components/CarItem/styles.css
+++ b/src/components/CarItem/styles.css
@@ -55,7 +55,7 @@
     margin-top: 3.2rem;
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: center;
     gap: 1rem;
     justify-content: space-between;
 }
@@ -128,12 +128,8 @@
 
 
 @media (min-width: 500px) {
-    .car-item header {
-      padding: 3.2rem;
-    }
-    
     .car-item footer {
-      padding: 1.8rem 3.2rem;
+      padding: 1.8rem 2rem;
       flex-direction: row;
     }
 
@@ -141,14 +137,8 @@
       width: 20rem;
     }
     
-  
-    .car-item > p {
-      padding: 0 3.2rem;
-    }
-  
     .car-item footer p strong {
       display: initial;
-      margin-left: 1.6rem;
     }
   
     .car-item footer button {
